Saving changes and created a cronjob to update the billboard_face status
