# storage/api-docs/api-docs.json
@@ -1977,9 +1977,6 @@
                                     "start_date": {
                                         "type": "string"
                                     },
-                                    "end_date": {
-                                        "type": "string"
-                                    },
                                     "total_amount": {
                                         "type": "number",
                                         "format": "float",
@@ -2095,9 +2092,6 @@
                                         ]
                                     },
                                     "start_date": {
-                                        "type": "string"
-                                    },
-                                    "end_date": {
                                         "type": "string"
                                     },
                                     "total_amount": {
